<resources>
    <string name="app_name">Reto1_Panaderia</string>
    <string name="contrasena">Contraseña</string>
    <string name="inicio_de_sesion">Inicia sesión</string>
    <string name="restablecer_password">Restablecer Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="cedula">Cédula</string>
    <string name="celular">Número de celular</string>
    <string name="direccion">Dirección</string>
    <string name="confirma_contrasena">Confirmar contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="olvidaste_tu_usuario">¿Olvidaste tu usuario?</string>
    <string name="registro">Regístrate</string>
    <string name="admin">Administrador</string>
    <string name="o">- O -</string>
    <string name="acepto_t_rminos_y_condiciones">Acepto términos y condiciones</string>
    <string name="acepto_pol_tica_para_tratamientos_de_datos">Acepto política para tratamientos de datos</string>
    <string name="restablecer">Restablecer</string>
    <string name="volver">Volver al login</string>
    <string name="barra_titulo_producto">Gestión de Producto</string>
    <string name="descripcion_ventana_producto">Registre los datos del nuevo producto:</string>
    <string name="categoria_label">Categoría:</string>
    <string name="nombre_producto_label">Nombre del producto:</string>
    <string name="precio_producto_label">Precio unidad $</string>
    <string name="cantidad_stock_label">Cantidad stock</string>
    <string name="agregar_producto_boton">Cantidad:</string>
    <string name="ver_productos_boton">Ver Productos</string>
    <string name="listado_de_productos">Listado de productos</string>
    <string name="listado_de_productos_a_comprar">Confirmar Pedido</string>
    <string name="celda_categoria_label">Categoría: </string>
    <string name="celda_nombre_producto_label">Nombre: </string>
    <string name="celda_precio_label">Precio: </string>
    <string name="celda_cantidad_label">Cantidad: </string>
    <string name="celda_modificar_boton">Modificar</string>
    <string name="celda_eliminar_boton">Eliminar</string>
    <string name="price_format">%.2f</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="celda_descripcion">Descripción</string>
    <string name="lista_descripcion">Descripción: </string>
    <string name="sincronizar_boton">Sincronizar</string>
    <string name="comprar_boton">Comprar</string>
    <string name="ver_carrito">Ver carrito</string>>

</resources>