<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textViewInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/inicio_de_sesion"
                android:textAlignment="center"
                android:textColor="#795548"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUsuario"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/bordes"
                android:drawableStart="@drawable/usuarioimg"
                android:drawablePadding="30dp"
                android:hint="@string/usuario"
                android:inputType="textEmailAddress"
                android:padding="10dp">

            </EditText>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bordes"
                android:drawableStart="@drawable/password"
                android:drawablePadding="30dp"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:padding="10dp">

            </EditText>

            <Button
                android:id="@+id/buttonIngresar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="#795548"
                android:text="@string/ingresar" />

            <TextView
                android:id="@+id/textViewO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/o" />

            <Button
                android:id="@+id/buttonRegistar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="#795548"
                android:text="@string/registro" />

            <TextView
                android:id="@+id/textViewOlvido"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/olvidaste_tu_usuario" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>