<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:padding="12dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logoapp" />

            <TextView
                android:id="@+id/textViewInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/restablecer_password"
                android:textAlignment="center"
                android:textColor="#795548"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/bordes"
                android:drawableStart="@drawable/usuarioimg"
                android:drawablePadding="30dp"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:padding="10dp">

            </EditText>

            <Button
                android:id="@+id/btnRestablecer"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="#795548"
                android:text="@string/restablecer" />

            <TextView
                android:id="@+id/textViewO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/o" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="#795548"
                android:text="@string/volver" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

  </LinearLayout>